# push-to-prod-mediacorp

./: .env.example  .gitignore  INCIDENT_REPORT.md  Procfile  README.md  agent.md  demo.md  demo.sh  main.py  pyproject.toml  render.yaml  requirements.txt
agent/: coder.py  pipeline.py  prompts.py  router.py
artifacts/presentation/: README.md
automator/: github_pr.py  jira_ticket.py
crash_runner/: run_and_capture.py
dashboard/backend/: app.py  models.py  sse.py  triggers.py
dashboard/frontend/: next.config.ts  package-lock.json  package.json
dashboard/frontend/src/app/: globals.css  layout.tsx  page.tsx
dashboard/frontend/src/app/incidents/: page.tsx
dashboard/frontend/src/components/: CodeDiff.tsx  IncidentCard.tsx  IncidentDetail.tsx  LogViewer.tsx  PipelineGraph.tsx  StatsBar.tsx  StatusBadge.tsx  TimelineChart.tsx  TriggerPanel.tsx
docs/: README.md
mock_server/: server.py
notifier/: slack_webhook.py
tests/: test_integration.py  test_jira_ticket.py  test_pipeline_notifications.py  test_slack_webhook.py
vulnerable_app/: connection_timeout.py  db_deadlock.py  gateway_timeout.py  integration.py  service_down.py
